--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -179,14 +179,30 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+      <version>[1.0.1B,)</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>mulgara-core</artifactId>
       <exclusions>
+        <exclusion>
+          <groupId>javax.transaction</groupId>
+          <artifactId>jta</artifactId>
+        </exclusion>
         <exclusion>
           <groupId>xml-apis</groupId>
           <artifactId>xml-apis</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>[1.3.04,1.9999.9999)</version>
     </dependency>
 
     <dependency>
@@ -216,9 +232,9 @@
     </dependency>
 
     <dependency>
-      <groupId>dom4j</groupId>
+      <groupId>org.dom4j</groupId>
       <artifactId>dom4j</artifactId>
-      <version>1.6.1</version>
+      <version>[2.1.3,)</version>
       <exclusions>
         <exclusion>
           <groupId>xml-apis</groupId>
