--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -388,7 +388,7 @@
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.2.2</version>
+      <version>[1.3.3,)</version>
     </dependency>
 
     <dependency>
@@ -397,9 +397,9 @@
     </dependency>
 
     <dependency>
-      <groupId>dom4j</groupId>
+      <groupId>org.dom4j</groupId>
       <artifactId>dom4j</artifactId>
-      <version>1.6.1</version>
+      <version>[2.1.3,)</version>
       <exclusions>
         <exclusion>
           <groupId>xml-apis</groupId>
@@ -687,18 +687,22 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
@@ -867,7 +871,7 @@
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
-      <version>1.3.04</version>
+      <version>[1.3.04,2.0)</version>
     </dependency>
 
     <dependency>
