--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
     <jersey.version>1.8</jersey.version>
     <sesame.version>2.7.11</sesame.version>
     <slf4j.version>1.7.2</slf4j.version>
-    <spring.version>3.0.7.RELEASE</spring.version>
+    <spring.version>[4.3.20,4.99999.99999)</spring.version>
     <trippi.version>1.5.10</trippi.version>
     <powermock.version>1.5.1</powermock.version>
     <httpcomponents.version>4.2.5</httpcomponents.version>
@@ -137,7 +137,7 @@
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
-        <version>3.2.1</version>
+        <version>[3.2.2,)</version>
       </dependency>
 
       <dependency>
@@ -410,7 +410,7 @@
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>1.8.3</version>
+        <version>[1.9.4,)</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -596,7 +596,7 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
-        <version>2.9.1</version>
+        <version>[2.12.0,)</version>
       </dependency>
       <dependency>
         <groupId>xmlunit</groupId>
@@ -663,7 +663,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.10</version>
+        <version>[4.13.1,)</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -699,7 +699,7 @@
     <repository>
       <id>central</id>
       <name>Central Maven Repository</name>
-      <url>http://repo1.maven.org/maven2</url>
+      <url>https://repo1.maven.org/maven2</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
@@ -708,7 +708,7 @@
     <repository>
       <id>duraspace-releases</id>
       <name>DuraSpace Releases Maven Repository</name>
-      <url>http://m2.duraspace.org/content/repositories/releases</url>
+      <url>https://m2.duraspace.org/content/repositories/releases</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -720,7 +720,7 @@
     <repository>
       <id>duraspace-thirdparty</id>
       <name>Duraspace Thirdparty Maven Repository</name>
-      <url>http://m2.duraspace.org/content/repositories/thirdparty</url>
+      <url>https://m2.duraspace.org/content/repositories/thirdparty</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -732,7 +732,7 @@
     <repository>
       <id>duraspace-snapshots</id>
       <name>DuraSpace Snapshots Maven Repository</name>
-      <url>http://m2.duraspace.org/content/repositories/snapshots</url>
+      <url>https://m2.duraspace.org/content/repositories/snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -744,7 +744,7 @@
     <repository>
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
+      <url>https://download.java.net/maven/2/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -774,7 +774,7 @@
     <repository>
       <id>apache-incubating</id>
       <name>Apache Incubating Repository</name>
-      <url>http://people.apache.org/repo/m2-incubating-repository/</url>
+      <url>https://people.apache.org/repo/m2-incubating-repository/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
